--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
-  <link rel="icon" type="image/png" href="/image/avatar/bot.png">
+  <link rel="icon" type="image/png" href="/image/avatar/bot.svg">
   <title>%REACT_APP_PAGE_TITLE%</title>
 </head>
 <body>
