fix: main page height

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="icon" type="image/png" href="/image/avatar/bot.svg">
   <title>%REACT_APP_PAGE_TITLE%</title>
+
+  <style>
+    html, body, #root {
+      height: 100%;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
 <noscript>
